[package]
name = "onigiri"
version = "0.1.14"
authors = ["Masahiko Hamazawa <ichigyo.zanmai@gmail.com>"]
repository = "https://github.com/masahiko-ofgp/onigiri"
license = "MIT"
edition = "2018"
readme = "README.md"
keywords = ["onigiri", "chars", "vec", "vector"]
categories = ["data-structures"]
description = """
This crate is a tool of handling chars.
"""

[dependencies]
